--- a/fireBaseChat/fireBaseChat/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/fireBaseChat/fireBaseChat/Views/Storyboards/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dZI-Y6-2gB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dZI-Y6-2gB">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -46,7 +47,7 @@
         <scene sceneID="CcW-9U-PMk">
             <objects>
                 <navigationController id="k1a-Qb-wZm" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Profile" id="QoI-Vm-F1S"/>
+                    <tabBarItem key="tabBarItem" title="Profile" image="person" catalog="system" id="QoI-Vm-F1S"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="Nbl-hs-jVY">
                         <rect key="frame" x="0.0" y="59" width="393" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -95,7 +96,7 @@
         <scene sceneID="ngV-B3-7rg">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gJQ-VR-433" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Chats" id="0u5-ae-iWZ"/>
+                    <tabBarItem key="tabBarItem" title="Chats" image="message" catalog="system" id="0u5-ae-iWZ"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="SKG-BV-bRs">
                         <rect key="frame" x="0.0" y="59" width="393" height="96"/>
@@ -112,6 +113,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="message" catalog="system" width="128" height="116"/>
+        <image name="person" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
